# todo_list

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: manage.py
app/config/: settings.py  urls.py
app/todo/: admin.py  forms.py  models.py  todo_services.py  urls.py  views.py
app/todo/templates/todo/: todo.html
app/users/: urls.py  views.py
env/: .env.example
style/: .flake8  .style.yapf  bandit.yaml
todo_app/todo/: admin.py  forms.py  models.py  todo_services.py  urls.py  views.py
todo_app/todo/migrations/: 0001_initial.py  0002_alter_todo_date_completed.py
todo_app/todo/templates/todo/: base.html  completed.html  createtodo.html  current.html  index.html  todo.html  todos.html
todo_app/todo_app/: settings.py  urls.py
todo_app/users/: admin.py  forms.py  models.py  urls.py  views.py
todo_app/users/migrations/: 0001_initial.py
todo_app/users/templates/users/: base.html  login.html  profile.html  registration.html
