[tool.poetry]
name = "todo-list"
version = "0.1.0"
description = "Django project from stepik course. Todo list"
authors = ["kazila <mrkazzila@gmail.com>"]
readme = "README.md"
packages = [{include = "todo_list"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "3.2.6"
pillow = "^9.4.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.12.0"
flake8-import-order = "^0.18.2"
flake8-docstrings = "^1.7.0"
flake8-builtins = "^2.1.0"
flake8-quotes = "^3.3.2"
flake8-bugbear = "^23.1.20"
flake8-commas = "^2.1.0"
pep8-naming = "^0.13.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
