[tool.poetry]
name = "todo-list"
version = "1.0.0"
description = "Stepik course. Simple todo listr website using django3"
authors = ["mrKazzila <mrkazzila@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "3.2.6"
python-dotenv = "^1.0.0"
pillow = "^9.4.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
flake8-import-order = "^0.18.2"
flake8-docstrings = "^1.7.0"
flake8-builtins = "^2.1.0"
flake8-quotes = "^3.3.2"
flake8-bugbear = "^23.1.20"
flake8-commas = "^2.1.0"
pep8-naming = "^0.13.3"
yapf = "^0.33.0"
toml = "^0.10.2"
pre-commit = "^3.3.0"
bandit = "^1.7.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.yapfignore]
ignore_patterns = [
  ".venv/*",
  "**/migrations/*",
  "app/manage.py",
]
